Performance: use LinkedList